--- a/_sass/execs.scss
+++ b/_sass/execs.scss
@@ -1,28 +1,35 @@
 @import 'colors';
 
 #execs {
-  .modal-overlay span {
-    position: relative;
-    display: block;
-    margin-bottom: 24px;
-    text-align: right;
-    font-weight: 100;
-    font-size: 24px;
-    color: $grey;
-  }
-  .modal-overlay h3 {
-    margin: 0;
-    margin-bottom: 12px;
-    text-align: right;
-  }
-  .modal-overlay .row:nth-child(3) > div:nth-child(2) { // Exec content
-    height: 50vh; // With the modal window defaulting at 90vh, this allows for
-                  // some whitespace at the bottom
-    overflow-y: auto;
+  .modal-overlay {
+    h3 {
+      text-align: right;
+    }
+
+    span {
+      position: relative;
+      display: block;
+      margin-bottom: 24px;
+      text-align: right;
+      font-weight: 100;
+      font-size: 18px;
+      color: $grey;
+    }
+
     p {
-      font-family: 'EB Garamond', serif;
+      font-family: 'EB Garamond', sans-serif;
       font-size: 16px;
     }
+
+    .col-8 .row:nth-child(2) { // The sub-row containing paragraphs
+      height: 85%;
+      overflow-y: auto;
+    }
+  }
+
+  .modal-image-container {
+    justify-content: flex-end; // Override default image alignment so that it
+                               // matches the text alignment
   }
 }
 
